<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fdfdfd">

        <ImageView
            android:id="@+id/ivArts"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/searc_result_arts_image"
            android:src="@drawable/art"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvArtName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            app:cardBackgroundColor="#f2eeeb"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivArts"
            app:strokeColor="#f2eeeb">

            <TextView
                android:id="@+id/tvArtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/addArtPage_artNameHint"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvArtArtist"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            app:cardBackgroundColor="#f2eeeb"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvArtName"
            app:strokeColor="#f2eeeb">

            <TextView
                android:id="@+id/tvArtArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/addArtPage_artArtistNameHint"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvArtYear"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            app:cardBackgroundColor="#f2eeeb"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvArtArtist"
            app:strokeColor="#f2eeeb">

            <TextView
                android:id="@+id/tvArtYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/addArtPage_artYearHint"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="#f2eeeb"
            android:text="@string/addArtPage_saveButton"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvArtYear" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

